eks_addons/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-web-service
  namespace: test-web
spec:
  selector:
    app: test-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
